examples/test/testpolicy11038.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11038
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key26: value1
      key27: value41
      key30: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value7
          key43: value38
          key36: value24
      podSelector:
        matchLabels:
          key34: value29
          key32: value38
          key0: value15
